--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -8,20 +8,23 @@
     android:layout_marginEnd="8dp"
     >
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ActorPhoto"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/actor_size"
+        android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars"
+
+        app:shapeAppearanceOverlay = "@style/ShapeAppearanceOverlay"
+        />
 
     <TextView
         android:id="@+id/ActorName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
         tools:text="TextViewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk"
         android:textAlignment="center"
         android:textColor="@color/text_actors_white"
