--- a/app/src/main/res/drawable-v24/star_grey.xml
+++ b/app/src/main/res/drawable-v24/star_grey.xml
@@ -3,7 +3,7 @@
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path
         android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z"
-        android:fillColor="#FF3365"
+        android:fillColor="@color/cl_grey"
         android:fillType="evenOdd"
         />
 </vector>
