--- a/app/src/main/res/drawable/ratingbar_svg_selector.xml
+++ b/app/src/main/res/drawable/ratingbar_svg_selector.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@android:id/background"
-        android:drawable="@drawable/ic_star_filled"/>
+        android:drawable="@drawable/star"/>
     <item
         android:id="@android:id/secondaryProgress"
-        android:drawable="@drawable/ic_star_filled"/>
+        android:drawable="@drawable/star"/>
     <item
         android:id="@android:id/progress"
-        android:drawable="@drawable/ic_star_filled"/>
+        android:drawable="@drawable/star"/>
 
 </layer-list>
