--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="leftnargin_star">3dp</dimen>
     <dimen name="actor_size">80dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
 </resources>
