--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="4dp"
     >
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -25,12 +26,12 @@
         android:id="@+id/ActorName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="TextViewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="@color/text_actors_white"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ActorPhoto"
         app:layout_constraintStart_toStartOf="@+id/ActorPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/ActorPhoto" />
+        app:layout_constraintTop_toBottomOf="@+id/ActorPhoto"
+        tools:text="TextViewkjh jkhb kjhbk jhbk hbk jhbk jhbk jhbk jbh jk" />
 </androidx.constraintlayout.widget.ConstraintLayout>
