--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="cl_grey">#6D6D80</color>
     <color name="cl_red">#FF3466</color>
     <color name="cl_white">#FFECECEC</color>
+    <color name="transparent_white">#BFECECEC</color>
     <color name="border_color">#636375</color>
     <color name="text_actors_white">#D8D8D8</color>
 </resources>
