--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,50 +8,64 @@
         <item name="materialCardViewStyle">@style/MyCardView</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="fontFamily">sans-serif</item>
-<!--        <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
-<!--        <item name="android:windowTranslucentStatus">true</item>-->
+        <!--        <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
+        <!--        <item name="android:windowTranslucentStatus">true</item>-->
     </style>
+
     <style name="MyCardView" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="cardBackgroundColor">@color/background_color</item>
     </style>
 
-    <style name="DetailTextTitle" >
+    <style name="DetailTextTitle">
         <item name="android:textColor">@color/cl_white</item>
         <item name="android:fontFamily">@font/roboto_black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">40sp</item>
+        <item name="android:textSize">42sp</item>
         <item name="android:textAlignment">viewStart</item>
 
     </style>
 
-    <style name="DetailTextReview" >
+    <style name="DetailTextOverview">
+        <item name="android:lineSpacingExtra">@dimen/DetailOverviewSpaceExtra</item>
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:textColor">@color/transparent_white</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
+
+    <style name="DetailTextReview">
         <item name="android:textColor">@color/cl_grey</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="DetailTextAge" >
+    <style name="DetailTextAge">
         <item name="android:textColor">@color/cl_white</item>
         <item name="android:textSize">12sp</item>
     </style>
-    <style name="DetailTextTags" >
+
+    <style name="DetailTextTags">
         <item name="android:textColor">@color/cl_red</item>
         <item name="android:textSize">12sp</item>
     </style>
+
     <style name="DetailsPosterST" parent="">
         <item name="cornerSizeTopRight">75dp</item>
         <item name="cornerSizeTopLeft">75dp</item>
         <item name="cornerFamilyTopRight">rounded</item>
     </style>
+
     <style name="ListsReviews" parent="DetailTextReview">
-          <item name="android:textSize">8sp</item>
+        <item name="android:textSize">8sp</item>
     </style>
-    <style name="ListsTags" >
+
+    <style name="ListsTags">
         <item name="android:textColor">@color/cl_red</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">8sp</item>
     </style>
-    <style name="ListsTitle" >
+
+    <style name="ListsTitle">
         <item name="android:textColor">@color/cl_white</item>
         <item name="android:textSize">40sp</item>
         <item name="android:singleLine">false</item>
@@ -60,20 +74,21 @@
         <item name="android:textAlignment">viewStart</item>
 
     </style>
+
     <style name="ShapeAppearanceOverlay" parent="">
         <item name="cornerSize">4dp</item>
-    <item name="cornerFamily">rounded</item>
+        <item name="cornerFamily">rounded</item>
     </style>
 
 
-
-    <style name="GlassRating" >
+    <style name="GlassRating">
         <item name="android:minHeight">10dp</item>
         <item name="android:minWidth">10dp</item>
         <item name="colorControlNormal">@color/cl_red</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
         <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
     </style>
+
     <color name="colorPrimary">@color/background_color</color>
     <color name="colorPrimaryDark">#FFC107</color>
     <color name="colorAccent">#00BCD4</color>
