добавил collapsingtoolbar к fragmentlist

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,18 +2,17 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="statusBarBackground">@android:color/transparent</item>
         <item name="materialCardViewStyle">@style/MyCardView</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="fontFamily">sans-serif</item>
         <!--        <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
         <!--        <item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
     <style name="MyCardView" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="cardBackgroundColor">@color/background_color</item>
+        <item name="cardBackgroundColor">@color/colorPrimary</item>
     </style>
 
     <style name="DetailTextTitle">
@@ -89,9 +88,4 @@
         <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
     </style>
 
-    <color name="colorPrimary">@color/background_color</color>
-    <color name="colorPrimaryDark">#FFC107</color>
-    <color name="colorAccent">#00BCD4</color>
-    <color name="activityBackground">#673AB7</color>
-    <color name="your_color">#3F51B5</color>
 </resources>
