--- a/app/src/main/res/drawable/age.xml
+++ b/app/src/main/res/drawable/age.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/background_color"
+    <solid android:color="@color/colorPrimary"
 
         />
 
