--- a/app/src/main/res/drawable/gradient_shape.xml
+++ b/app/src/main/res/drawable/gradient_shape.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:endColor="@color/background_color"
+        android:endColor="@color/colorPrimary"
         android:type="linear" />
 </shape>
